--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css">
-<body class="w3-container">
+<body onload="preload()" class="container">
 
 <h2>Dynamic Progress Bar with %</h2>
 <p>Centered label:</p>
 
-<div class="w3-progress-container">
-  <div id="progress1" class="w3-progressbar"  value="62" style="width:27%;background-color: green">
-    <div id="progress1demo" class="w3-center w3-text-white">27%</div>
+<div class="progress-container">
+  <div id="progress1" class="progressbar"  value="62">
+    <div id="progress1demo" class="center text">27%</div>
   </div>
 </div>
 <br>
-<div class="w3-progress-container" >
-  <div id="progress2" class="w3-progressbar "  value="45" style="width:20%;background-color: green">
-    <div id="progress2demo" class="w3-center w3-text-white">20%</div>
+<div class="progress-container" >
+  <div id="progress2" class="progressbar "  value="45">
+    <div id="progress2demo" class="center text">20%</div>
   </div>
 </div>
 <br>
-<div class="w3-progress-container" >
-  <div id="progress3" class="w3-progressbar"  value="62" style="width:27%;background-color: green">
-    <div id="progress3demo" class="w3-center w3-text-white">27%</div>
+<div class="progress-container" >
+  <div id="progress3" class="progressbar"  value="62">
+    <div id="progress3demo" class="center text">27%</div>
   </div>
 </div>
 <br>
@@ -32,10 +32,10 @@
   <option value="3">progress3</option>
 </select>
 
-<button class="w3-btn w3-dark-grey" onclick="move(10)">+10</button>
-<button class="w3-btn w3-dark-grey" onclick="move(38)">+38</button>
-<button class="w3-btn w3-dark-grey" onclick="move(-13)">-13</button>
-<button class="w3-btn w3-dark-grey" onclick="move(-18)">-18</button>
+<button class="button dark-grey" onclick="move(10)">+10</button>
+<button class="button dark-grey" onclick="move(38)">+38</button>
+<button class="button dark-grey" onclick="move(-13)">-13</button>
+<button class="button dark-grey" onclick="move(-18)">-18</button>
 
 
 <script>
@@ -63,6 +63,20 @@ function move(amount) {
   }
   
 }
+function preload(){
+document.getElementById("progress1").style.backgroundColor ="green";
+document.getElementById("progress1").style.width = 27 + '%';
+document.getElementById("progress1"+"demo").innerHTML = 27 * 1  + '%';
+
+document.getElementById("progress2").style.backgroundColor ="green";
+document.getElementById("progress2").style.width = 20 + '%';
+document.getElementById("progress2"+"demo").innerHTML = 20 * 1  + '%';
+
+document.getElementById("progress3").style.backgroundColor ="green";
+document.getElementById("progress3").style.width = 27 + '%';
+document.getElementById("progress3"+"demo").innerHTML = 27 * 1  + '%';
+}
+
 </script>
 
 </body>
