--- a/unittests.html
+++ b/unittests.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="styles.css">
-<body onload="preload()" class="container">
-
-<h2>Dynamic Progress Bar with %</h2>
-<p>Centered label:</p>
-
+<head>
+    <meta charset=UTF-8" />
+    <title>TestProgressbar</title> 
+</head>
+<body onload="check()" class="container">
 <div class="progress-container">
   <div id="progress1" class="progressbar"  value="62">
     <div id="progress1demo" class="center text">27%</div>
@@ -38,6 +36,6 @@
 <button class="button dark-grey" onclick="move(-18)">-18</button>
 
 <script src="myscript.js"></script>
+<script src="testScript.js"></script>
 </body>
 </html>
-
