reference is corrected

--- a/unittests.html
+++ b/unittests.html
@@ -36,6 +36,6 @@
 <button class="button dark-grey" onclick="move(-18)">-18</button>
 
 <script src="myscript.js"></script>
-<script src="testScript.js"></script>
+<script src="testscript.js"></script>
 </body>
 </html>
